# wss

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: exception-handling-plan.md  optimization-report.md
examples/: hanoi4.c  hanoi4_js.html  hanoi4_nojs.html  horsle.c  horsle_js_step.html  mt19937.cpp  mt19937.html  quine.html  quine.rs.txt  quine.wat  quine_rs.html  rand.c  rand.html  rpg.c  rpg_js.html
src/: ast.rs  constants.rs  ir.rs  ir8.rs  lower.rs  main.rs  page.rs  print.rs  regalloc.rs  schedule.rs
src/css/: doc.rs  fold.rs  mod.rs  parse.rs  tests.rs
src/dirty/: minify.rs  mod.rs  randomize.rs
src/emit/: base.html  inline.rs  logic.rs  mod.rs  properties.rs  support.rs  tests.rs
src/lower8/: analysis.rs  builder.rs  calls.rs  mod.rs  ops.rs
src/module/: const_expr.rs  helpers.rs  mod.rs
src/opt8/: bool.rs  facts.rs  instcombine.rs  instsimplify.rs  mod.rs  rewrite.rs  tests.rs
src/parse/: frame.rs  mod.rs
src/validate/: mod.rs  operators.rs
tests/: cases.json  run_blackbox.js
tests/blackbox-runner/: Cargo.toml
tests/blackbox-runner/src/: main.rs  probe.template.js  runner.rs
tests/blackbox-runner/src/runner/: probe.rs
tests/cases/: addsub_i32_stress.c  arithmetic_basic.c  array_memory_interop.c  basic_bitwise_i32_stress.c  basic_mul_i32_stress.c  basic_relops_i32_stress.c  basic_relops_u32_stress.c  basic_sdivrem_i32_stress.c  basic_udivrem_i32_stress.c  bitcount_chain.c  bitcount_relop_blend.c  bitcount_rotate_eqz_chain.c  bitops_signext_builtins.c  bitwise_shift.c  (+191 more)
